# rust-idmap

./: .gitignore  Cargo.toml  LICENSE  README.md
idmap-derive/: Cargo.toml
idmap-derive/src/: lib.rs
src/: compact.rs  direct.rs  graph.rs  integer_id.rs  lib.rs  ordered.rs  serialization.rs  set.rs  table.rs  utils.rs
tests/: basic.rs  direct.rs  set.rs
