[package]
name = "idmap"
version = "0.1.1"
authors = ["Techcable <Techcable@techcable.net>"]
description = "Efficient maps of integer id keys to values, backed by an underlying `Vec`"
repository = "https://github.com/Techcable/rust-idmap"

readme = "README.md"
license = "MIT"

[dependencies]
itertools = "^0.6.1"
serde = { version = "^1.0.11", optional = true }

[dev-dependencies]
# Testing serde
serde_test = "^1.0.11"
serde_derive = "^1.0.11"

[dependencies.idmap-derive]
path = "idmap-derive"
version = "0.1.0"

[features]
default = ["compact", "serde"]
# Enables compact id maps
compact = []
