[package]
name = "idmap"
version = "0.2.16"
authors = ["Techcable <Techcable@techcable.net>"]
description = "Efficient maps of integer id keys to values, backed by an underlying `Vec`"
repository = "https://github.com/Techcable/rust-idmap"

readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "^1.0.11", optional = true }
# Allows implementing IntegerId for graphid
petgraph = { version = "^0.4.7", optional = true }
# Used as the underlying bitset implementation
fixedbitset = "^0.1.8"

[dev-dependencies]
# Testing serde
serde_test = "^1.0.11"
serde_derive = "^1.0.11"
itertools = "^0.6.1"

[dependencies.idmap-derive]
path = "idmap-derive"
version = "^0.1.1"

[features]
default = ["nonzero"]
# Implement IntegerId for NonZero<T>, which is enabled by default
nonzero = []

[package.metadata.docs.rs]
features = ["serde", "petgraph"]
# We need to disable support for NonZero since their nightly does't support it
no-default-features = true

