[package]
name = "idmap"
version = "0.2.19"
authors = ["Techcable <Techcable@techcable.net>"]
description = "Efficient maps of integer id keys to values, backed by an underlying `Vec`"
repository = "https://github.com/Techcable/rust-idmap"
edition = "2018"

readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "^1.0.11", optional = true }
# Allows implementing IntegerId for graphid
petgraph = { version = "^0.5", optional = true }
# Used as the underlying bitset implementation
fixedbitset = "^0.3"

[dev-dependencies]
# Testing serde
serde_test = "^1.0.11"
serde_derive = "^1.0.11"
itertools = "^0.9"

[dev-dependencies.idmap-derive]
path = "idmap-derive"
version = "^0.1.1"

[features]
default = []
nightly = []

[package.metadata.docs.rs]
features = ["serde", "petgraph"]

