[package]
name = "idmap-derive"
version = "0.1.2"
authors = ["Techcable <Techcable@techcable.net>"]
description = "Automaticatically derives IntegerId for the `idmap` crate"
repository = "https://github.com/Techcable/rust-idmap"
edition = "2018"

readme = "../README.md"
license = "MIT"


[lib]
proc-macro = true

[dependencies]
syn = "^1"
quote = "^1"
proc-macro2 = "^1"
